sass fix to find img and add spacing

--- a/sass/navbar.scss
+++ b/sass/navbar.scss
@@ -44,13 +44,15 @@ nav {
 }
 
 body {
-  background: url("brick.webp");
+  background: url("img/brick.webp");
   background-repeat: repeat;
 
   #content {
+    margin: 1em;
+    padding: 1em;
     background-color: rgba(0,0,0,0.25);
     backdrop-filter: blur(5px);
-    border-radius: 15px;
+    border-radius: 5px;
     color: #FFF;
   }
 }
